[workspace]
members = [
  ".",
  "binbuf-derive",
  "binbuf-macros"
]

[package]
name = "binbuf"
version = "0.0.1"
authors = ["Techassi <git@techassi.dev>"]
categories = ["encoding", "parsing", "network-programming"]
description = "binbuf is a small library to work with binary (network) data"
documentation = "https://docs.rs/binbuf"
edition = "2021"
keywords = ["binary", "numbers", "network"]
license = "MIT"
repository = "https://github.com/Techassi/binbuf"
homepage = "https://github.com/Techassi/binbuf"
exclude = [
  "tests/**/*",
  ".github/*",
  ".vscode/*",
  ".gitignore"
]

[features]
full = ["derive", "macros"]
derive = []
macros = []

[dependencies]
binbuf-derive = { path = "binbuf-derive", version = "0.0.1" }
binbuf-macros = { path = "binbuf-macros", version = "0.0.1" }
thiserror = "1.0.38"
