[package]
name = "binbuf-derive"
version = "0.0.1"
authors = ["Techassi <git@techassi.dev>"]
categories = ["encoding", "parsing", "network-programming"]
description = "Automatically implement binbuf traits with derive macros"
documentation = "https://docs.rs/binbuf_derive"
edition = "2021"
keywords = ["binary", "numbers", "network"]
license = "MIT"
repository = "https://github.com/Techassi/binbuf"
homepage = "https://github.com/Techassi/binbuf"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["derive", "extra-traits"] }
proc-macro2 = "1.0.49"
structmeta = "0.1.5"
quote = "1.0.23"
