[package]
name = "binbuf"
version = "0.1.0"
edition.workspace = true

[features]
full = ["derive", "macros"]
derive = []
macros = []

[dependencies]
binbuf-derive = { path = "../binbuf-derive", version = "0.0.1" }
binbuf-macros = { path = "../binbuf-macros", version = "0.0.1" }

snafu.workspace = true
