[package]
name = "binbuf-derive"
version = "0.0.1"
documentation = "https://docs.rs/binbuf_derive"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["derive", "extra-traits"] }
proc-macro2 = "1.0.49"
structmeta = "0.1.5"
quote = "1.0.23"
