[package]
name = "binbuf-macros"
version = "0.0.1"
authors = ["Techassi <git@techassi.dev>"]
categories = ["encoding", "parsing", "network-programming"]
description = "Utility macros used by binbuf"
documentation = "https://docs.rs/binbuf_macros"
edition = "2021"
keywords = ["binary", "numbers", "network"]
license = "MIT"
repository = "https://github.com/Techassi/binbuf"
homepage = "https://github.com/Techassi/binbuf"

[dependencies]
